tests/baselines/reference/typesWithProtectedConstructor.errors.txt
tests/cases/conformance/types/members/typesWithProtectedConstructor.ts(6,9): error TS2674: Constructor of type '(): C' is protected and only accessible within class 'C'.
tests/cases/conformance/types/members/typesWithProtectedConstructor.ts(14,10): error TS2674: Constructor of type '(x: number): C2' is protected and only accessible within class 'C2'.


==== tests/cases/conformance/types/members/typesWithProtectedConstructor.ts (2 errors) ====
    
    class C {
        protected constructor() { }
    }
    
    var c = new C(); // error C is protected
            ~~~~~~~
!!! error TS2674: Constructor of type '(): C' is protected and only accessible within class 'C'.
    var r: () => void = c.constructor;
    
    class C2 {
        protected constructor(x: number);
        protected constructor(x: any) { }
    }
    
    var c2 = new C2(); // error C2 is protected
             ~~~~~~~~
!!! error TS2674: Constructor of type '(x: number): C2' is protected and only accessible within class 'C2'.
    var r2: (x: number) => void = c2.constructor;